--- a/Bagrot.csproj
+++ b/Bagrot.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\Login.cs" />
     <Compile Include="Models\NetworkObject.cs" />
+    <Compile Include="Models\Room.cs" />
     <Compile Include="Models\Round.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="NetworkObjectConstants.cs" />
@@ -152,6 +153,21 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\RoundRow.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\outcomes\LoseLayout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\outcomes\WinLayout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\outcomes\TieLayout.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
